@@ -1,5 +1,10 @@
 $Id$
 
+2012-11-09  Alex Samorukov  <samm@os2.kiev.ua>
+	os_freebsd.cpp: adding handling of SCSI devices exported with mfip
+	driver. FreeBSD changing PDT code to 0x1f and we are changing it back
+	to 0x00 (direct-access block device).
+
 2012-11-04  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
